# ecs172-recommender-systems

./: main.py  pyproject.toml
assignment1/: README.md  ranking.ipynb  rankings.py  sample_submission.csv  submission.csv  test.csv
assignment2/: movies.csv  response.html  response.ipynb  sample_submission.csv  split_stats.json  test_pairs.csv  users.csv
assignment3/: README.md  pipeline.py  submission.csv
assignment3/Assignment_3___Multi_stage_Recommendation_export/: data_card.md  evaluation_code.py  sample_submission.csv  train.csv
assignment3/assignment3data/: test_users.csv
final_project/: .gitignore  README.md  pyproject.toml
final_project/msd_recsys/: __init__.py  checkpoint.py  data.py  diagnostics.py  eval.py  features.py  ranker.py  retrieval.py
final_project/notebooks/: pipeline.ipynb
