[project]
name = "msd_recsys"
version = "0.1.0"
description = "Million Song Dataset two-stage recommender with semantic IDs"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.4",
    "implicit>=0.7.2",
    "lightgbm>=4.3",
    "tqdm>=4.66",
    "matplotlib>=3.8",
    "seaborn>=0.13",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["msd_recsys*"]
